test/arrays/literals/hetLiteralsNotUnifiable.good
hetLiteralsNotUnifiable.chpl:1: error: can't compute a unified element type for this array
