test/arrays/literals/hetLiteralsNotUnifiable.chpl
var A = [1.0, true, "hi"];

writeln(A, ": ", A.type:string);

